# duckdb.js

./: .gitignore  .gitmodules  Jenkinsfile
app/: .gitignore
core/: .gitignore  CMakeLists.txt
core/cmake/: clang-tidy.cmake  duckdb.cmake  googletest.cmake  spdlog.cmake
core/include/duckdb_wasm/: api.h
core/include/duckdb_wasm/common/: span.h
core/src/: api.cpp  api_proxy.cpp
core/test/: tester.cc
demo/: .gitignore  package-lock.json  package.json
demo/public/: index.html
demo/src/: AppContext.tsx  Demo.css  Demo.tsx  DuckDB.ts  Terminal.ts  index.css  index.tsx
demo/src/fonts/: fonts.css
demo/src/proto/: duckdb_generated.ts
dev/: .gitignore  Dockerfile.emsdk  build_emsdk_image.sh  build_protoc.sh  compile_wasm.sh  generate_compile_commands.sh  generate_proto.sh
duckdb_web/: .gitignore  CMakeLists.txt
duckdb_web/include/duckdb_web/: api.hpp
duckdb_web/include/duckdb_web/proto/: duckdb_generated.h  duckdb_web_generated.h
duckdb_web/modules/: flatbuffers.cmake  spdlog.cmake
duckdb_web/src/: api.cpp  main.cpp
lib/: .gitignore  CMakeLists.txt  package-lock.json  package.json
lib/cmake/: clang-tidy.cmake
lib/modules/: duckdb.cmake  googletest.cmake
proto/: duckdb.fbs  duckdb_web.fbs
proto/lib/cpp/: CMakeLists.txt
proto/lib/cpp/include/duckdb_wasm/proto/: api.pb.cc  api.pb.h  data.pb.cc  data.pb.h  query_plan.pb.cc  query_plan.pb.h  query_result.pb.cc  query_result.pb.h  sql_type.pb.cc  sql_type.pb.h
proto/lib/cpp/include/duckdb_webapi/proto/: api.pb.cc  api.pb.h  query_plan.pb.cc  query_plan.pb.h  query_result.pb.cc  query_result.pb.h  sql_type.pb.cc  sql_type.pb.h
proto/lib/js/: package-lock.json  package.json  webpack.config.js
proto/lib/js/src/: index.d.ts  index.js
proto/lib/js/src/proto/: api_pb.d.ts  api_pb.js  data_pb.d.ts  data_pb.js  query_plan_pb.d.ts  query_plan_pb.js  query_result_pb.d.ts  query_result_pb.js  sql_type_pb.d.ts  sql_type_pb.js
proto/spec/: api.proto  data.proto  query_plan.proto  query_result.proto  sql_type.proto
util/: build_proto.sh  build_wasm.sh
webapi/: CMakeLists.txt
webapi/cmake/: duckdb.cmake  protobuf.cmake
webapi/include/duckdb_webapi/: api.h
webapi/src/: api.cpp  api_proxy.cpp
