project(duckdb_webapi_proto)
cmake_minimum_required(VERSION 3.10)

# ---------------------------------------------------------------------------
# Library

add_library(duckdb_webapi_proto STATIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include/duckdb_webapi/proto/api.pb.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/include/duckdb_webapi/proto/query_plan.pb.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/include/duckdb_webapi/proto/query_result.pb.cc
    ${CMAKE_CURRENT_SOURCE_DIR}/include/duckdb_webapi/proto/sql_type.pb.cc
)
target_include_directories(duckdb_webapi_proto INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(duckdb_webapi_proto protobuf)

